# 10x_submission

./: .gitignore  README.md
src/tb3_simulation/launch/: spawn_robot.launch.py  trajectory_tracking.launch.py
src/tb3_simulation/rviz/: trajectory_tracking.rviz
src/trajectory_tracking/: CMakeLists.txt  package.xml
src/trajectory_tracking/config/: pure_pursuit_controller_params.yaml  trajectory_generator_params.yaml  waypoints.yaml
src/trajectory_tracking/include/trajectory_tracking/: bspline.h  path_smoother.h  s_curve_velocity_profile.h  trajectory_parameterizer.h
src/trajectory_tracking/msg/: TimedTrajectory.msg  TimedTrajectoryPoint.msg
src/trajectory_tracking/src/: bspline.cpp  path_smoother.cpp  pure_pursuit_controller.cpp  s_curve_velocity_profile.cpp  trajectory_generator.cpp  trajectory_parameterizer.cpp  trajectory_visualizer.cpp
src/trajectory_tracking/time_parameterized_traj/: bspline_trajectory.csv  star_trajectory.csv
